# structs_data_C

./: .gitignore  .gitmodules  CMakeLists.txt  array-list.c  array-list.h  ast.h  config.mk  general.mk  hash-table-dynamic.h  hash-table.h  hash-table.md  linux.mk  matriz-list.h  vector-list.h  windows.mk
examples/: code-array-list_vector-list.c  code_array-list.c  code_array-list_vector-list.c  code_ast.c  code_hash-table-dynamic.c  code_hash-table.c  code_matriz-list.c  code_vector-list.c
src/: array-list.c  ast.c  hash-table-dynamic.c  hash-table.c  matriz-list.c  vector-list.c
